[package]
name = "rtftp"
version = "0.5.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Konstantin Nigmatullin <rangolit@gmail.com>"]

[dependencies]
tokio = {version = "1.45.1", features = ["time", "sync", "rt", "net"]}
libc = "0.2.0"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
